--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/setup-node@v1 # 使用官方提供的setup-node 1.0版本配置node环境
         with:
           node-version: "12.x" # 使用node 12版本作为运行环境
+      - name: Cache cookies
+        uses: actions/cache@v2
+        with:
+          path: ~/cache.tgz
+          key: ${{ secrets.CACHE_NAME }}-${{ github.run_id }} # Cache名字，防止泄漏，自行设置
+          restore-keys: ${{ secrets.CACHE_NAME }}-
       - name: Install dependencies
         run: npm install # 安装依赖
       - name: Run autosend
@@ -22,8 +28,10 @@ jobs:
           TEXTNOW_PASSWORD: ${{secrets.TEXTNOW_PASSWORD}} # 获取并设置定义好的用户密码环境变量值
           TEXTNOW_RECIPIENT: ${{secrets.TEXTNOW_RECIPIENT}} # 获取并设置定义好的接收方的电话号码环境变量值
           TEXTNOW_MESSAGE: ${{secrets.TEXTNOW_MESSAGE}} # 获取并设置定义好的发送的信息内容环境变量值
-          TEXTNOW_COOKIES: ${{secrets.TEXTNOW_COOKIES}}
+          TEXTNOW_COOKIES: ${{secrets.TEXTNOW_COOKIES}} # 获取并设置定义好的Cookies环境变量值 多个cookie_str1|+|cookie_str2
         run: |
+          mkdir .cache
+          if [ -e ~/cache.tgz ]; then tar zxf ~/cache.tgz; fi
           if [ "${TEXTNOW_COOKIES}" == "" ]; then node index.js; exit 0; fi
           main() {
             set -e
@@ -35,3 +43,4 @@ jobs:
             done
           }
           eval main $(sed 's/^/"/g;s/$/"/g;s/|+|/" "/g'<<<${TEXTNOW_COOKIES})
+          tar zcf ~/cache.tgz .cache
