--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,23 +18,22 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/cache.tgz
-          key: ${{ secrets.CACHE_NAME }}-${{ github.run_id }} # Cache名字，防止泄漏，自行设置
+          key: ${{ secrets.CACHE_NAME }}-${{ github.run_id }} # CACHE_NAME 缓存名字，防止泄漏，自行设置
           restore-keys: ${{ secrets.CACHE_NAME }}-
       - name: Install dependencies
         run: npm install # 安装依赖
       - name: Run autosend
         env:
-          TEXTNOW_USERNAME: ${{secrets.TEXTNOW_USERNAME}} # 获取并设置定义好的用户名环境变量值
-          TEXTNOW_PASSWORD: ${{secrets.TEXTNOW_PASSWORD}} # 获取并设置定义好的用户密码环境变量值
+          # TEXTNOW_USERNAME: ${{secrets.TEXTNOW_USERNAME}} # 获取并设置定义好的用户名环境变量值
+          # TEXTNOW_PASSWORD: ${{secrets.TEXTNOW_PASSWORD}} # 获取并设置定义好的用户密码环境变量值
           TEXTNOW_RECIPIENT: ${{secrets.TEXTNOW_RECIPIENT}} # 获取并设置定义好的接收方的电话号码环境变量值
           TEXTNOW_MESSAGE: ${{secrets.TEXTNOW_MESSAGE}} # 获取并设置定义好的发送的信息内容环境变量值
-          TEXTNOW_COOKIES: ${{secrets.TEXTNOW_COOKIES}} # 获取并设置定义好的Cookies环境变量值 多个cookie_str1|+|cookie_str2
+          TEXTNOW_COOKIES: ${{secrets.TEXTNOW_COOKIES}} # 获取并设置定义好的Cookies环境变量值 多账号cookies_str1|+|cookies_str2
         run: |
           mkdir .cache
           if [ -e ~/cache.tgz ]; then tar zxf ~/cache.tgz; fi
           if [ "${TEXTNOW_COOKIES}" == "" ]; then node index.js; exit 0; fi
           main() {
-            set -e
             let count=1
             for i in "$@"; do
               echo Start account: $count....
